Upload Revisi ke-1 Tugas 1

--- a/tugas_1.html
+++ b/tugas_1.html
@@ -15,7 +15,7 @@
 </table>
 
 <!-- Section 2: Judul di kiri dan gambar di kanan -->
-<table border="1" width="100%" id="about">
+<table border="1" width="100%" id="header">
     <tr>
         <td width="50%" align="left" valign="top">
             <h1>Selamat Datang di Website Saya</h1>
@@ -29,7 +29,7 @@
 </table>
 
 <!-- Section 3: Biodata dengan 6 box -->
-<table border="1" width="100%" id="Biodata">
+<table border="1" width="100%" id="biodata">
     <tr>
         <td colspan="3" align="center">
             <h2>About Me</h2>
@@ -49,7 +49,7 @@
 </table>
 
 <!-- Section 4: Portofolio -->
-<table border="1" width="100%" id="Portfolio">
+<table border="1" width="100%" id="portfolio">
     <tr>
         <td colspan="2" align="center">
             <h2>Portofolio</h2> 
@@ -80,5 +80,6 @@
         </td>
     </tr>
 </table>
+
 </body>
 </html>
